# arc-theme

./: meson_options.txt
common/: meson.build
common/gtk-3.0/sass/: _budgie.scss
common/labwc/: meson.build
